# MediaKraken

./: .bandit  .gitattributes  .gitignore  Jenkinsfile  README.md
docker/core/: Cargo.toml
docker/core/mkbarman/: Dockerfile
docker/core/mkbroadcast/: .gitignore  Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mkchatmumble/: Dockerfile
docker/core/mkchatteamspeak/: Dockerfile
docker/core/mkcron/: .env  .gitignore  Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mkdatabase/: Dockerfile  docker-entrypoint.sh
docker/core/mkdatabase_citus/: Dockerfile
docker/core/mkdownload/: Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile  requirements.txt
docker/core/mkfilebeat/: Dockerfile  filebeat.yml  setup.sh
docker/core/mkgamesdbnetfetchbulk/: .gitignore  Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mkglobalcache/: .gitignore  Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mkguessitrest/: .travis.yml  Dockerfile  HISTORY.rst  apidoc.json  setup.py  swagger.yaml  tox.ini
docker/core/mkhaproxy/: haproxy.cfg
docker/core/mkhardwarecontrol/: Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mkhardwarescanner/: Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mkinotify/: Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mklibretrocorefetchupdate/: .gitignore  Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mkmediascanner/: .dockerignore  Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mkmetadata/: .gitignore  Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mkmetadatamame/: Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mkmulticast/: .gitignore  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mkmulticast_client/: Dockerfile
docker/core/mkmusicbrainz/: Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mknginx/: Dockerfile  nginx.vh.default.conf
docker/core/mknut/: Dockerfile
docker/core/mkopenlibrarynetfetchbulk/: .dockerignore  .gitignore  Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mkpgbouncer/: .entrypoint.sh.swp  Dockerfile
docker/core/mkrabbitconsume/: .dockerignore  .gitignore  Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mkrabbitmq/: .gitignore  Dockerfile  README.txt
docker/core/mkredis/: Dockerfile  docker-entrypoint.sh
docker/core/mkschedulesdirectupdate/: Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mksharescanner/: .gitignore  Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile  scan.xml
docker/core/mktcpserver/: .gitignore  Cargo.toml  Dockerfile
docker/core/mktmdbnetfetchbulk/: .dockerignore  .gitignore  Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mktmdbnetfetchupdate/: .gitignore  Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mktranscode/: .gitignore  Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mktransmission/: Dockerfile
docker/core/mktvheadend/: Dockerfile
docker/core/mkwebapp/: Cargo.toml  Dockerfile  Rocket.toml  wtf.txt
docker/core/mkwebaxum/: Cargo-docker.toml  Cargo-local.toml  Cargo.toml  Dockerfile
docker/core/mkwebnut/: Dockerfile  README.md  run.sh
docker/core/mkwebrocket/: Cargo.toml  Dockerfile  (+1 more)
src/mk_lib_common/: Cargo.toml  mk_lib_json_options.rs
src/mk_lib_compression/: Cargo.toml
src/mk_lib_database/: Cargo.toml  lib.rs
src/mk_lib_file/: Cargo.toml
src/mk_lib_hardware/: Cargo.toml
src/mk_lib_hash/: Cargo.toml
src/mk_lib_image/: Cargo.toml
src/mk_lib_logging/: Cargo.toml
src/mk_lib_metadata/: Cargo.toml
src/mk_lib_network/: Cargo.toml
src/theater_controller_pi/: Cargo.toml
src/theater_full/: Cargo.toml
src/theater_thin/: Cargo.toml
testing_rust/: Cargo.toml  docker-compose.yml  mediakraken_start.sh  mediakraken_stop.sh
testing_rust/test_axum_auth/: Cargo.toml  Dockerfile  dock_build.sh  docker-compose.yml
testing_rust/test_axum_auth_minimal/: Cargo.toml
testing_rust/test_axum_auth_minimal_ssl/: Cargo.toml  Dockerfile
testing_rust/test_axum_auth_ssl/: Cargo.toml
testing_rust/test_command/: Cargo.toml
testing_rust/test_dioxus/: Cargo.toml
testing_rust/test_docker/: Cargo.toml
testing_rust/test_docker_api/: Cargo.toml
testing_rust/test_docker_running_api/: Cargo.toml
testing_rust/test_docker_running_port_api/: Cargo.toml
testing_rust/test_env_variables/: Cargo.toml
testing_rust/test_format/: Cargo.toml
testing_rust/test_host_ips/: Cargo.toml
testing_rust/test_libxml/: Cargo.toml
testing_rust/test_mklib/: Cargo.toml
testing_rust/test_network_broadcast/: Cargo.toml
testing_rust/test_onvif/: Cargo.toml
testing_rust/test_postgresql/: Cargo.toml
testing_rust/test_postgresql_tokio/: Cargo.toml
testing_rust/test_python/: Cargo.toml
testing_rust/test_python_pyo3/: Cargo.toml
testing_rust/test_quick_xml/: Cargo.toml
testing_rust/test_quick_xml_to_serde/: Cargo.toml
testing_rust/test_rabbitmq_consume/: Cargo.toml
testing_rust/test_rabbitmq_publish/: Cargo.toml
testing_rust/test_rocket_auth/: Cargo.toml
testing_rust/test_rocket_auth2/: Cargo.toml
testing_rust/test_roku/: Cargo.toml
testing_rust/test_roxmltree/: Cargo.toml
testing_rust/test_share_read/: .gitignore  Cargo.toml
testing_rust/test_share_read_db/: Cargo.toml
testing_rust/test_share_scanner/: Cargo.toml
testing_rust/test_substring/: Cargo.toml
testing_rust/test_torrent_name_parse/: .gitignore  Cargo.toml
testing_rust/test_transmission/: Cargo.toml
testing_rust/test_type_conversion/: Cargo.toml
testing_rust/test_upnp/: Cargo.toml
testing_rust/test_walkdir/: Cargo.toml
testing_rust/test_webapp/: Cargo.toml
testing_rust/test_xml_generator/: Cargo.toml
testing_rust/test_xml_rs/: Cargo.toml
testing_rust/test_xml_rs_mame/: Cargo.toml
testing_rust/test_xmlparser/: Cargo.toml
(+1335 files in other folders)
