[workspace]

members = [
    "test_axum_auth",
    "test_axum_auth_minimal",
    "test_docker_api",
    "test_docker_running_api",
    "test_docker_running_port_api",
    "test_env_variables",
    "test_host_ips",
    "test_libxml",
    "test_network_broadcast",
    "test_postgresql",
    "test_postgresql_tokio",
#    "test_python",    
#    "test_python_pyo3",
    "test_quick_xml",
    "test_quick_xml_to_serde",
    "test_rabbitmq_consume",
    "test_rabbitmq_publish",
#    "test_rocket_auth",
#    "test_rocket_auth2",
    "test_roxmltree",
    "test_share_scanner",
    "test_substring",
    "test_torrent_name_parse",
    "test_type_conversion",
    "test_torrent_name_parse",
    "test_type_conversion",
    "test_walkdir",
    "test_webapp",
    "test_xml_rs",
    "test_xml_rs_mame",
    "test_xmlparser",                                    
]
