[workspace]

members = [
    "test_axum_auth",
    "test_axum_auth_minimal",
    "test_command",
    "test_dioxus",
    "test_docker",
    "test_docker_api",
    "test_docker_running_api",
    "test_docker_running_port_api",
    "test_format",
    "test_env_variables",
    "test_host_ips",
    "test_libxml",
    "test_network_broadcast",
    #"test_onvif",
    "test_postgresql",
    "test_postgresql_tokio",
    #"test_python",
    #"test_python_pyo3",
    #"test_quick_xml",
    "test_quick_xml_to_serde",
    "test_rabbitmq_consume",
    "test_rabbitmq_publish",
    "test_roku",
    "test_roxmltree",
    "test_share_read",
    #"test_share_read_db",
    "test_share_scanner",
    "test_substring",
    "test_torrent_name_parse",
    "test_type_conversion",
    "test_torrent_name_parse",
    "test_transmission",
    "test_type_conversion",
    "test_upnp",
    "test_walkdir",
    "test_xml_rs",
    "test_xml_generator",
    "test_xml_rs_mame",
    "test_xmlparser",
]
