[workspace]

members = [
#    "mkbroadcast",
#     "mkcron",
#     "mkdownload",
#     "mkgamesdbnetfetchbulk",
#     "mkglobalcache",
#     "mkhardwarecontrol",
#     "mkhardwarescanner",
#     "mkinotify",
#     "mklibretrocorefetchupdate",
#     "mkmediascanner",
#     "mkmetadata",
#     "mkmetadatamame",
#     "mkmulticast",    
#     "mkopenlibrarynetfetchbulk",
#     "mkrabbitconsume",
#     "mkschedulesdirectupdate",
#     "mksharescanner",
# #    "mktcpserver",
#     "mktmdbnetfetchbulk",
#     "mktmdbnetfetchupdate",
#     "mktranscode",
#     "mkwebaxum",
# #    "mkwebrocket",
]
