[workspace]

members = [
#    "mkbroadcast",
#     "mkcron",
#     "mkdownload",
#     "mkgamesdbnetfetchbulk",
#     "mkglobalcache",
#     "mkhardwarecontrol",
#     "mkhardwarescanner",
#     "mkinotify",
#     "mklibretrocorefetchupdate",
#     "mkmediascanner",
#     "mkmetadata",
#     "mkmetadatamame",
#     "mkmulticast",    
#     "mkmusicbrainz",    
#     "mkopenlibrarynetfetchbulk",
#     "mkrabbitconsume",
#     "mkschedulesdirectupdate",
#     "mksharescanner",
#     "mktmdbnetfetchbulk",
#     "mktmdbnetfetchupdate",
#     "mktranscode",
     "mkwebaxum",
]
