[package]
name = "mk_lib_common"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
bytesize = { version = "1.3.0", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
docker-api = { version = "0.14.0", features = ["swarm"] }
futures = "0.3.30"
lazy_static = "1.4.0"
num-format = { version = "0.4.4", features = [
    "with-system-locale",
    "with-num-bigint",
] }
paginator = "0.2.6"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
tokio-test = "*"
