[package]
name = "mk_lib_database"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum_session = { version = "0.5.0", features = ["postgres-rustls", "redis-db"] }
axum_session_auth = { version = "0.5.0", features = [
    "postgres-rustls",
    "redis-db",
] }
chrono = { version = "0.4.26", features = ["serde"] }
mk_lib_common = { path = "../mk_lib_common" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.7.1", features = [
    "chrono",
    "ipnetwork",
    "json",
    "runtime-tokio",
    "postgres",
    "uuid",
] }
sys-info = "0.9.1"
tokio = { version = "1.28.2", features = ["full"] }
urlencoding = "2.1.2"
uuid = { version = "1.3.3", features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = "*"
