[package]
name = "mk_lib_database"
version = "0.0.4"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
mk_lib_common = { version="0.0.1", registry = "kellnr" }

anyhow = "1.0.79"
async-trait = "0.1.77"
axum_session = { version = "0.12.4", features = ["postgres-rustls", "redis-db"] }
axum_session_auth = { version = "0.12.1", features = [
    "postgres-rustls",
    "redis-db",
] }
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = [
    "chrono",
    "ipnetwork",
    "json",
    "runtime-tokio",
    "postgres",
    "uuid",
] }
sys-info = "0.9.1"
tokio = { version = "1.36.0", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1.7.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = "*"
