[package]
name = "mk_lib_file"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
aws-config = { version = "0.56.0", optional = true }
aws-sdk-s3= { version = "0.30.0", optional = true }
mk_lib_database = { path = "../mk_lib_database", optional = true}
pavao = { version = "0.2.3", optional = true }
serde_json = "1.0.96"
stdext = "0.3.1"
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.3.3", features = ["serde", "v4"] }
walkdir = "2.3.3"

[features]
s3 = ["dep:aws-config", "dep:aws-sdk-s3"]
share = ["mk_lib_database"]
smb = ["pavao", "mk_lib_database"]

[dev-dependencies]
tokio-test = "*"
