[package]
name = "mk_lib_file"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
aws-config = { version = "1.1.1", optional = true }
aws-sdk-s3 = { version = "1.11.0", optional = true }
libnfs = { version = "0.1.1", optional = true }
mk_lib_database = { path = "../mk_lib_database", optional = true }
pavao = { version = "0.2.3", optional = true }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
walkdir = "2.4.0"

[features]
nfs = ["libnfs"]
s3 = ["dep:aws-config", "dep:aws-sdk-s3"]
share = ["mk_lib_database"]
smb = ["pavao", "mk_lib_database"]

[dev-dependencies]
tokio-test = "*"
