[package]
name = "mk_lib_file"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
mk_lib_database = { version = "0.0.1", registry = "kellnr", optional = true }

aws-config = { version = "1.1.4", optional = true }
aws-sdk-s3 = { version = "1.14.0", optional = true }
libnfs = { version = "0.1.1", optional = true }
pavao = { version = "0.2.4", optional = true }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
walkdir = "2.4.0"

[features]
nfs = ["libnfs"]
s3 = ["dep:aws-config", "dep:aws-sdk-s3"]
share = ["mk_lib_database"]
smb = ["pavao", "mk_lib_database"]

[dev-dependencies]
tokio-test = "*"
