[package]
name = "mk_lib_hash"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
mk_lib_file = { version="0.0.1", registry = "kellnr" }

blake3 = "1.5.0"
crc32fast = "1.3.2"
digest = "0.10.7"
#ed2k = { git = "https://github.com/runfalk/ed2k-rs" }
ed2k = { version="0.3.0", registry = "kellnr" }
md-5 = "0.10.6"
serde_json = "1.0.113"
sha1 = "0.10.6"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
tokio-test = "*"
