[package]
name = "mk_lib_logging"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "native-tls",
] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
stdext = "0.3.1"

[dev-dependencies]
tokio-test = "*"
