[package]
name = "mk_lib_logging"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.23", default-features = false, features = [
    "json",
    "native-tls",
] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
stdext = "0.3.1"

[dev-dependencies]
tokio-test = "*"
