[package]
name = "mk_lib_logging"
version = "0.0.2"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
reqwest = { version = "0.11.24", default-features = false, features = [
    "json",
    "native-tls",
] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.2.3" # 0.3.0 breaks with jitter and base, but I can't find base
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
stdext = "0.3.2"

[dev-dependencies]
tokio-test = "*"
