[package]
name = "mk_lib_metadata"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
discid = { version = "0.5.0", optional = true}
flickr = "0.1.1"
hls_m3u8 = "0.4.1"
id3 = "1.7.0"
lib-mal = "0.5.1"
mangadex = "0.1.2"
mk_lib_common = { path = "../mk_lib_common" }
mk_lib_database = { path = "../mk_lib_database" }
mk_lib_hash = { path = "../mk_lib_hash" }
mk_lib_network = { path = "../mk_lib_network" }
# musicbrainz_rs = { version = "0.5.0", features = ["async"] }
omdb = "0.3.2"
open-library = "0.7.1"
rand = "0.8.5"
reqwest = "0.11.18"
# rusty_ytdl = "0.6.2"  # breaks sscache
select = "0.6.0"
serde_json = "1.0.96"
sqlx = { version = "0.7.1", features = [
    "chrono",
    "ipnetwork",
    "json",
    "runtime-tokio",
    "postgres",
    "uuid",
] }
soundcloud = "0.4.0"
stdext = "0.3.1"
substring = "1.4.5"
tokio = "1.28.2"
tokio-util = { version = "0.7.8", features = ["compat"] }
torrent-name-parser = "0.12.1"
twitch_api = { version = "0.7.0-rc.6", features = ["client", "helix", "reqwest", "twitch_oauth2"] }
twitch_oauth2 = "0.12.4"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
vimeo-rs = { version = "0.1.7", features = ["progressbar"] }

[features]
discid = ["dep:discid"]

[dev-dependencies]
tokio-test = "*"

