[package]
name = "mk_lib_metadata"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
mk_lib_common = { version="0.0.1", registry = "kellnr" }
mk_lib_database = { version="0.0.1", registry = "kellnr" }
mk_lib_hash = { version="0.0.1", registry = "kellnr" }
mk_lib_network = { version="0.0.1", registry = "kellnr" }

discid = { version = "0.5.0", optional = true }
flickr = "0.1.1"
hls_m3u8 = "0.4.1"
id3 = "1.12.0"
#lib-mal = "0.5.1"  # myanimelist
mangadex = "0.1.2"
# musicbrainz_rs = { version = "0.5.0", features = ["async"] }
omdb = "0.3.2"
open-library = "0.7.1"
rand = "0.8.5"
reqwest = "0.11.24"
# rusty_ytdl = "0.6.2"  # breaks sscache
select = "0.6.0"
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = [
    "chrono",
    "ipnetwork",
    "json",
    "runtime-tokio",
    "postgres",
    "uuid",
] }
soundcloud = "0.4.0"
substring = "1.4.5"
tokio = "1.36.0"
tokio-util = { version = "0.7.10", features = ["compat"] }
torrent-name-parser = "0.12.1"
twitch_api = { version = "0.7.0-rc.6", features = [
    "client",
    "helix",
    "reqwest",
    "twitch_oauth2",
] }
twitch_oauth2 = "0.12.9"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
vimeo-rs = { version = "0.2.1" }

[features]
discid = ["dep:discid"]

[dev-dependencies]
tokio-test = "*"
