[package]
name = "mk_lib_network"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
cotton-ssdp = "0.0.2"
crab-dlna = "0.1.1"
futures = "0.3.28"
futures-util = "0.3.28"
governor = "0.6.0"
ibverbs = { version = "0.7.0", optional = true}  # since docker, no infiniband
ipnet = "2.7.2"
ldap3 = "0.11.1"
lettre = "0.10.4"
mini-telnet = "0.1.8"
mk_lib_file = { path = "../mk_lib_file" }
mk_lib_logging = { path = "../mk_lib_logging" }
nonzero_ext = "0.3.0"
openweathermap_client = "0.2.0"
phf = { version = "0.11.1", features = ["macros"] }
pin-utils = "0.1.0"
quickxml_to_serde = { version = "0.5.0", features = ["json_types"] }
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "native-tls",
] }
reqwest-middleware = "0.2.2"
reqwest-retry = "0.2.2"
rss = "2.0.4"
rsteam = "0.1.3"
rupnp = "1.1.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serialport = "4.2.1"
ssh-rs = "0.3.2"
stdext = "0.3.1"
suppaftp = { version = "5.1.1", features = ["native-tls"] }
surge-ping = "0.8.0"
tokio = { version = "1.28.2", features = ["full"] }
transmission-rpc = "0.4.1"
wakey = "0.3.0"

[features]
infiniband = ["dep:ibverbs"]

[dev-dependencies]
tokio-test = "*"
