[package]
name = "mk_lib_network"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
mk_lib_file = { version="0.0.1", registry = "kellnr" }

cidr-utils = { version = "0.5.11", features = [
    "serde",
] } # 0.6.x breaks buildof cidr addr
cotton-ssdp = "0.0.3"
crab-dlna = "0.2.1"
easy-upnp = "0.1.1"
futures = "0.3.30"
futures-util = "0.3.30"
governor = "0.6.0"
ibverbs = { version = "0.7.1", optional = true } # since docker, no infiniband
igd-next = "0.14.3"
# ipnet = "2.7.2"
ldap3 = "0.11.3"
lettre = "0.11.4"
mini-telnet = "0.1.8"
nonzero_ext = "0.3.0"
openweathermap_client = "0.2.0"
phf = { version = "0.11.2", features = ["macros"] }
pin-utils = "0.1.0"
quickxml_to_serde = { version = "0.5.0", features = ["json_types"] }
reqwest = { version = "0.11.24", default-features = false, features = [
    "json",
    "native-tls",
] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.2.3" # 0.3.0 breaks with jitter and base, but I can't find base
rss = "2.0.7"
rsteam = "0.2.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serialport = "4.3.0"
ssh-rs = { version = "0.5.0", features = ["scp"] }
suppaftp = { version = "5.3.1", features = ["native-tls"] }
surge-ping = "0.8.0"
tokio = { version = "1.36.0", features = ["full"] }
transmission-rpc = "0.4.2"
wakey = "0.3.0"

[features]
infiniband = ["dep:ibverbs"]

[dev-dependencies]
tokio-test = "*"
