[package]
name = "theater_controller_pi"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
crossbeam = "0.8.2"
fltk = { version = "1.3.26", features = ["fltk-bundled"] }
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
stdext = "0.3.1"

[dev-dependencies]
tokio-test = "*"