[package]
name = "theater_full"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
fltk = { version = "1.3.1", features = ["fltk-bundled"] }
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
stdext = "0.3.1"

[dev-dependencies]
tokio-test = "*"