[package]
name = "theater_full"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
fltk = { version = "1.4.3", features = ["fltk-bundled"] }
fltk-theme = "0.4.0"
mk_lib_logging = { path = "/root/MediaKraken/src/mk_lib_logging" }
mk_lib_network = { path = "/root/MediaKraken/src/mk_lib_network" }
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
stdext = "0.3.1"

[dev-dependencies]
tokio-test = "*"
