[package]
name = "theater_thin"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
fltk = { version = "1.4.21", features = ["fltk-bundled"] }
mk_lib_network = { path = "../mk_lib_network" }
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
stdext = "0.3.1"

[dev-dependencies]
tokio-test = "*"
