[package]
name = "theater_thin"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
mk_lib_network = { path = "../mk_lib_network" }

fltk = { version = "1.4.24", features = ["fltk-bundled"] }
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
stdext = "0.3.1"

[dev-dependencies]
tokio-test = "*"
