[package]
name = "example"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.58"
axum = { version = "0.6.12", features = ["http2", "json", "ws"] }
axum_session = { version = "0.1.5", features = [ "postgres-rustls" ] }
axum_session_auth = { version = "0.1.1", features = [ "postgres-rustls" ] }
tokio = { version = "1.27.0", features = ["full", "tracing"] }
sqlx = { version = "0.6.3", features = [
    "macros",
    "offline",
    "migrate",
    "postgres",
    "all-types",
    "runtime-tokio-rustls",
] }
serde = "1.0.159"
