[package]
name = "mkexample"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.79"
askama = { version = "0.12.1", features = ["with-axum", "mime", "mime_guess"] }
askama_axum = "0.4.0"
askama-filters = "0.1.3"
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["http2", "json", "ws"] }
axum-extra = "0.9.2"
axum_session = { version = "0.12.1", features = [ "postgres-rustls"] }
axum_session_auth = { version = "0.12.0", features = [ "postgres-rustls" ] }
axum_static = "1.2.3"
bytesize = {version = "1.3.0", features = ["serde"]}
chrono = { version = "0.4.31", features = ["serde"] }
docker-api = { version = "0.14.0", features = ["swarm"] }
mk_lib_database = { path = "mk_lib_database" }
mk_lib_logging = { path = "mk_lib_logging" }
mk_lib_rabbitmq = { path = "mk_lib_rabbitmq" }
lazy_static = "1.4.0"
libc = "0.2.152"
num-format = { version = "0.4.4", features = ["with-system-locale"] }
paginator = "0.2.6"
rcgen = "0.12.0"
reqwest = { version = "0.11.23", default-features = false, features = [
    "json",
    "native-tls",
] }
ring = "0.17.7"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = [
    "chrono",
    "json",
    "runtime-tokio",
    "postgres",
    "uuid",
] }
stdext = "0.3.1"
sys-info = "0.9.1"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13" }
transmission-rpc = "0.4.2"
urlencoding = "2.1.3"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
walkdir = "2.4.0"

[dev-dependencies]
tokio-test = "*"
