[package]
name = "mktestaxumauth"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.7.4" }
axum_session = { version = "0.12.4", features = [
    "postgres-rustls",
    "sqlite-rustls",
] }
axum_session_auth = { version = "0.12.1", features = [
    "postgres-rustls",
    "sqlite-rustls",
] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
tokio = { version = "1.36.0", features = ["full", "tracing"] }
async-trait = "0.1.77"
sqlx = { version = "0.7.3", features = [
    "macros",
    "migrate",
    "postgres",
    "sqlite",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
] }
anyhow = "1.0.80"
serde = "1.0.197"
rcgen = "0.12.1"
