[package]
name = "mkexample"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
axum = { version = "0.6.14", features = ["http2", "json", "ws"] }
axum-extra = "0.7.2"
axum_session = { version = "0.2.0", features = [ "postgres-rustls"] }
axum_session_auth = { version = "0.2.0", features = [ "postgres-rustls" ] }
axum_static = "1.2.1"
chrono = { version = "0.4.24", features = ["serde"] }
lazy_static = "1.4.0"
libc = "0.2.126"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = [
    "chrono",
    "json",
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
] }
stdext = "0.3.1"
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4.13" }
urlencoding = "2.1.2"
uuid = { version = "1.3.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = "*"
