[package]
name = "mkexampleminimal"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.68"
axum = { version = "0.7.4", features = ["http2", "json", "ws"] }
axum-extra = "0.9.2"
axum_session = { version = "0.12.1", features = [ "postgres-rustls"] }
axum_session_auth = { version = "0.12.0", features = [ "postgres-rustls" ] }
axum_static = "1.2.3"
chrono = { version = "0.4.31", features = ["serde"] }
lazy_static = "1.4.0"
libc = "0.2.152"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = [
    "chrono",
    "json",
    "runtime-tokio",
    "postgres",
    "uuid",
] }
stdext = "0.3.1"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13" }
urlencoding = "2.1.3"
uuid = { version = "1.7.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = "*"
