[package]
name = "mkaxumauthminimal"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["http2", "json", "ws"] }
axum-extra = "0.9.2"
axum_session = { version = "0.12.4", features = ["postgres-rustls"] }
axum_session_auth = { version = "0.12.1", features = ["postgres-rustls"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
axum_static = "1.2.3"
chrono = { version = "0.4.34", features = ["serde"] }
lazy_static = "1.4.0"
libc = "0.2.153"
rcgen = "0.12.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = [
    "chrono",
    "json",
    "runtime-tokio",
    "postgres",
    "uuid",
] }
stdext = "0.3.1"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13" }
urlencoding = "2.1.3"
uuid = { version = "1.7.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = "*"
