[package]
name = "mktestcommand"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
reqwest = { version = "0.11.23", default-features = false, features = [
    "json",
    "native-tls",
] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
stdext = "0.3.1"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
tokio-test = "*"
