[package]
name = "mktestdioxus"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
dioxus = "0.4.3"
dioxus-desktop = {version="0.4.3", features = ["tokio_runtime"], default-features = false }

[dev-dependencies]
tokio-test = "*"
