[package]
name = "mktestdockerapirunningapiport"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
docker-api = { version = "0.14.0", features = ["swarm"] }
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
tokio-test = "*"
