[package]
name = "mktestlibxml"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
async-std = "1.12.0"
chrono = "0.4.24"
flate2 = "1.0.26"
libxml = "0.3.2"
reqwest = { version = "0.11.17", default-features = false, features = ["json", "rustls-tls"] }
#roxmltree = "0.14.1"
rustls = "0.21.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.7.1", features = [ "chrono", "json", "runtime-tokio", "postgres", "uuid" ] }
sys-info = "0.9.1"
tar = "0.4.38"
tokio = { version = "1.28.0", features = ["full"] }
zip = "0.6.6"

[dev-dependencies]
tokio-test = "*"
