[package]
name = "mktestpostgresqltokio"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }

[dev-dependencies]
tokio-test = "*"
